<resources>
    <string name="app_name">Lapak Event</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wedding">Pernikahan</string>
    <string name="sport">Olahraga</string>
    <string name="birthday">Ulang Tahun</string>
    <string name="bazaar">Bazar</string>
    <string name="music_concert">Konser Musik</string>
    <string name="other_menu">Menu Lainnya</string>
    <string name="home_search_hint">Mau bikin acara apa?</string>
    <string name="popular">Populer</string>
    <string name="home">Beranda</string>
    <string name="transaction">Transaksi</string>
    <string name="business">Bisnis</string>
    <string name="profile">Profil</string>
    <string name="username">Nama<font fgcolor='#D92D20'>*</font></string>
    <string name="password">Password<font fgcolor='#D92D20'>*</font></string>
    <string name="old_password">Password Lama<font fgcolor='#D92D20'>*</font></string>
    <string name="new_password">Password Baru<font fgcolor='#D92D20'>*</font></string>
    <string name="confirm_password">Konfirmasi Password<font fgcolor='#D92D20'>*</font></string>
    <string name="email">Email<font fgcolor='#D92D20'>*</font></string>
    <string name="phone_number">Nomor Telpon<font fgcolor='#D92D20'>*</font></string>
    <string name="search_history">Riwayat Pencarian</string>
    <string name="delete_all">Hapus Semua</string>
    <string name="popular_search">Sedang Populer</string>
    <string name="search_location">Cari lokasi</string>
    <string name="search_bank">Cari Bank</string>
    <string name="notification_sample">Ada vendor Wedding Planning yang Anda idam-idamkan? Yuk, intip beragam pilihannya di sini!</string>
    <string name="onboarding_description_example">Kami mengumpulkan perusahaan event organizer yang berkomitmen untuk memberikan pengalaman yang tak terlupakan dalam setiap acara impian anda.</string>
    <string name="price_plan_description">Anda bisa <b>custom harga</b> berdasarkan kebutuhan dengan mengklik <b>chat.</b></string>
    <string name="service_date">Tanggal Layanan<font fgcolor='#D92D20'>*</font></string>
    <string name="company_name">Nama Perusahaan<font fgcolor='#D92D20'>*</font></string>
    <string name="company_owner_name">Nama Pemilik Perusahaan<font fgcolor='#D92D20'>*</font></string>
    <string name="company_npwp">NPWP Perusahaan<font fgcolor='#D92D20'>*</font></string>
    <string name="event_organizer_name">Nama Event Organizer<font fgcolor='#D92D20'>*</font></string>
    <string name="bio">Bio<font fgcolor='#D92D20'>*</font></string>
    <string name="category_event_organizer">Spesialisasi Kategori<font fgcolor='#D92D20'>*</font></string>
    <string name="country">Negara<font fgcolor='#D92D20'>*</font></string>
    <string name="province">Provinsi<font fgcolor='#D92D20'>*</font></string>
    <string name="city">Kota<font fgcolor='#D92D20'>*</font></string>
    <string name="postal_code">Kode Pos<font fgcolor='#D92D20'>*</font></string>
    <string name="office_address">Alamat Kantor<font fgcolor='#D92D20'>*</font></string>
    <string name="business_document">Dokumen Bisnis (min 1 berkas)<font fgcolor='#D92D20'>*</font></string>
    <string name="product_name">Nama Produk<font fgcolor='#D92D20'>*</font></string>
    <string name="product_category">Kategori Produk<font fgcolor='#D92D20'>*</font></string>
    <string name="product_description">Deskripsi Produk<font fgcolor='#D92D20'>*</font></string>
    <string name="upload_product_images">Unggah Portfolio (gambar/video)<font fgcolor='#D92D20'>*</font></string>

    <string name="paymentva_atm_guide">
        1. Masukkan kartu ATM dan PIN BNI Anda.
        \n2. Pada menu utama, pilih “Menu Lainnya”.
        \n3. Pilih Transfer.
        \n4. Setelah itu, pilih “Rekening Tabungan”.
        \n5. Pilih “Rekening BNI”.
        \n6. Masukkan nomor Virtual Account 78737489977.
        \n7. Masukkan jumlah pembayaran sesuai tagihan.
        \n8. Cek kembali transaksi Anda. Setelah itu pilih “Ya”.
    </string>
    <string name="default_web_client_id">366165432214-qj099h8dmi8u5qnbjsb835koh940m84l.apps.googleusercontent.com</string>
</resources>