<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    tools:context=".activities.search.SearchActivity">

    <include
        android:id="@+id/searchHeader"
        layout="@layout/search_header" />

    <LinearLayout
        android:id="@+id/linearLayoutSearchHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchHeader">

        <TextView
            android:id="@+id/tvSearchHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/search_history"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.066"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etSearchFixed" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tvDeleteAllHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/squared_ripple_effect"
            android:clickable="true"
            android:fontFamily="@font/inter_medium"
            android:text="@string/delete_all"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.066"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etSearchFixed" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSearchHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:clipToPadding="false"
        android:isScrollContainer="false"
        android:nestedScrollingEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutSearchHistory" />

    <TextView
        android:id="@+id/tvPopularSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_medium"
        android:text="@string/popular_search"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvSearchHistory" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPopularSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:clipToPadding="false"
        android:isScrollContainer="false"
        android:nestedScrollingEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/tvPopularSearch" />
</androidx.constraintlayout.widget.ConstraintLayout>