<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.eoregistration.fragments.CompanyInformationFormFragment">

    <LinearLayout
        android:id="@+id/companyInformationSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp">

        <TextView
            android:id="@+id/tvCompanyInformationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="Informasi Perusahaan"
            android:textColor="@color/purple_700"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvCompanyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/company_name"
            android:textColor="@color/gray_700"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etCompanyName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/custom_input"
            android:fontFamily="@font/inter_regular"
            android:hint="Masukkan nama perusahaan"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/gray_500"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvCompanyOwnerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/company_owner_name"
            android:textColor="@color/gray_700"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etCompanyOwnerName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/custom_input"
            android:fontFamily="@font/inter_regular"
            android:hint="Masukkan nama pemilik perusahaan"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/gray_500"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvNPWP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/company_npwp"
            android:textColor="@color/gray_700"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etNPWP"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/custom_input"
            android:fontFamily="@font/inter_regular"
            android:hint="Masukkan NPWP perusahaan"
            android:inputType="number"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColor="@color/gray_500"
            android:textSize="14sp" />
    </LinearLayout>

</FrameLayout>