<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activities.signup.SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="24dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/logo_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:text="Sign Up"
                android:textColor="@color/gray_900"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/usernameContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/username"
                android:textColor="@color/gray_900"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input"
                android:fontFamily="@font/inter_regular"
                android:gravity="center_vertical"
                android:hint="Enter your username"
                android:inputType="text"
                android:paddingHorizontal="14dp"
                android:paddingVertical="14dp"
                android:textColorHint="@color/gray_500"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/passwordContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/password"
                android:textColor="@color/gray_900"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input"
                android:fontFamily="@font/inter_regular"
                android:gravity="center_vertical"
                android:hint="Create a Password"
                android:inputType="text"
                android:paddingHorizontal="14dp"
                android:paddingVertical="14dp"
                android:textColorHint="@color/gray_500"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/confirmPasswordContainer"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/confirm_password"
                android:textColor="@color/gray_900"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input"
                android:fontFamily="@font/inter_regular"
                android:gravity="center_vertical"
                android:hint="Re-enter your password"
                android:inputType="text"
                android:paddingHorizontal="14dp"
                android:paddingVertical="14dp"
                android:textColorHint="@color/gray_500"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/emailContainer"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/email"
                android:textColor="@color/gray_900"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input"
                android:fontFamily="@font/inter_regular"
                android:gravity="center_vertical"
                android:hint="Enter your email"
                android:inputType="text"
                android:paddingHorizontal="14dp"
                android:paddingVertical="14dp"
                android:textColorHint="@color/gray_500"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/phoneNumberContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/phone_number"
                android:textColor="@color/gray_900"
                android:textSize="14sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input"
                android:fontFamily="@font/inter_regular"
                android:gravity="center_vertical"
                android:hint="Enter your phone number"
                android:inputType="text"
                android:paddingHorizontal="14dp"
                android:paddingVertical="14dp"
                android:textColorHint="@color/gray_500"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/createAccountBtn"
            style="@style/primaryBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="Create Account" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/googleSignUpBtn"
            style="@style/googleBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="Sign up with google"
            app:icon="@drawable/google_icon"
            app:iconGravity="textStart"
            app:iconTint="@null" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have an account? "
                android:textColor="@color/gray_700"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/signInBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:fontFamily="@font/inter_semi_bold"
                android:text="Sign in"
                android:textColor="@color/purple_700"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>